# hola-api-register-ms

./: .dockerignore  .gitignore  Dockerfile  README.md  __main__.py  docker-compose.yaml  pyproject.toml
src/: application.py  config.py  routing.py  routing_exceptions.py
src/abstract/: __init__.py
src/api/: dependencies.py  exceptions.py  handlers.py  models.py  schemas.py  service.py
src/database/: __init__.py  tables.py
src/interfaces/: __init__.py
src/logging/: __init__.py
src/repo/: __init__.py
src/router_dependencies/: __init__.py
src/utils/: ansi_colors.py  onetime_codes.py  security.py  smtp.py
static/templates/: base_email.html  new_account.html
