[tool.poetry]
name = "hola-register-ms"
version = "0.0.1"
description = "Hola api register microservice"
authors = ["Raphael Golubev <raphael.golubev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
